--- a/src/style.css
+++ b/src/style.css
@@ -15,6 +15,22 @@
 .row {
   width: 100%;
 }
+
+.card {
+  position: relative;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  min-width: 0;
+  word-wrap: break-word;
+  background-color: #fff;
+  background-clip: border-box;
+  border: 1px solid rgba(0, 0, 0, 0.125);
+  border-radius: 0.25rem;
+}
+
+
 .justify-content-center {
   justify-content: center !important;
 }
@@ -81,7 +97,11 @@ button {
   font-size: 16px;
   outline: none;
 }
-
+input[type="text"]:focus {
+  outline: 2px solid #edf2fe !important;
+  outline-offset: 1px;
+  border: 1px solid #2a5bd7 !important;
+}
 
 .col {
   -ms-flex-preferred-size: 0;
@@ -468,3 +488,97 @@ button {
     max-width: 100%;
   }
 }
+
+.mt-0,
+.my-0 {
+  margin-top: 0;
+}
+.mr-0,
+.mx-0 {
+  margin-right: 0;
+}
+.mb-0,
+.my-0 {
+  margin-bottom: 0;
+}
+.ml-0,
+.mx-0 {
+  margin-left: 0;
+}
+.m-1 {
+  margin: 0.25rem;
+}
+.mt-1 {
+  margin-top: 0.25rem;
+}
+.mr-1 {
+  margin-right: 0.25rem;
+}
+.mb-1 {
+  margin-bottom: 0.25rem;
+}
+.ml-1 {
+  margin-left: 0.25rem;
+}
+.m-2 {
+  margin: 0.5rem;
+}
+.mt-2 {
+  margin-top: 0.5rem;
+}
+.mr-2 {
+  margin-right: 0.5rem;
+}
+.mb-2 {
+  margin-bottom: 0.5rem;
+}
+.ml-2 {
+  margin-left: 0.5rem;
+}
+.m-3 {
+  margin: 1rem;
+}
+.mt-3 {
+  margin-top: 1rem;
+}
+.mr-3 {
+  margin-right: 1rem;
+}
+.mb-3 {
+  margin-bottom: 1rem;
+}
+.ml-3 {
+  margin-left: 1rem;
+}
+.m-4 {
+  margin: 1.5rem;
+}
+.mt-4 {
+  margin-top: 1.5rem;
+}
+.mr-4 {
+  margin-right: 1.5rem;
+}
+.mb-4 {
+  margin-bottom: 1.5rem;
+}
+.ml-4 {
+  margin-left: 1.5rem;
+}
+.m-5 {
+  margin: 2rem;
+}
+.mt-5 {
+  margin-top: 2rem;
+}
+.mr-5 {
+  margin-right: 2rem;
+}
+.mb-5 {
+  margin-bottom: 2rem;
+}
+.ml-5 {
+  margin-left: 2rem;
+}
+.m-6 {
+  margin: 3
