--- a/src/style.css
+++ b/src/style.css
@@ -9,10 +9,32 @@
 .wrapper {
   width: 100vw;
   display: flex;
+  flex-direction: column;
+  align-items: center;
   justify-content: center;
 }
 .container {
   width: 60vw;
+}
+@media (max-width: 768px) {
+  .container {
+    width: 80vw;
+  }
+}
+@media (max-width: 576px) {
+  .container {
+    width: 90vw;
+  }
+}
+@media (max-width: 480px) {
+  .container {
+    width: 95vw;
+  }
+}
+@media (max-width: 360px) {
+  .container {
+    width: 100vw;
+  }
 }
 .row {
   display: -ms-flexbox;
