refactor: shorten url component

--- a/src/style.scss
+++ b/src/style.scss
@@ -6,6 +6,9 @@
   font-family: 'Poppins', sans-serif;
   overflow-x: hidden;
 }
+input {
+  border-radius: 1rem !important;
+}
 .wrapper {
   width: 100vw;
   display: flex;
